# traceyield

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  TRADEMARK.md  canonical.py  daily_metrics.json  install-task.cmd  pages.py  pricing_history.json  pyproject.toml  report.html  report.py  roadmap.csv  run.cmd  test_canonical.py  test_compat.py  test_packaging.py  test_report.py  uninstall-task.cmd
.claude/: tempo-project.yaml
.github/workflows/: ci.yml  deploy-site.yml  pr-pages.yml
design-system/: README.md  index.html  styles.css
design-system/js/: app.js  components.js  tokens.js
docs/: _config.yml  adding-openai-support.md  architecture.md  canonical-data-model.md  claude-usage-data-research.md  codexprovider.md  cross-provider-reporting.md  handoff-codexprovider.md  index.md  learning-from-claude-insights.md  openai-usage-data-research.md  token-mechanics-and-insights.md  tokenops-framework.md  traceyield-framework.md
docs/brand/: LICENSE.md  brand-guidelines.html
docs/decisions/: 0001-aggregate-flip.md  0002-as-billed-costing-per-activity-date-pricing.md  0003-predict-rung-run-rate-and-runway.md  0004-raw-event-retention-archive-before-null.md  0005-installable-cross-platform-release.md  0006-context-health-panel.md  0007-cross-provider-reporting-per-provider-rate-cards.md  0008-installable-src-layout-package.md  0009-insights-behavioral-facet-and-remediate-engine.md  README.md
docs/delivery/epics/: E1.md  E2.md  E3.md
docs/delivery/features/: E1-F1.md  E1-F2.md  E1-F3.md  E2-F1.md  E2-F2.md  E2-F3.md  E2-F4.md  E2-F5.md  E3-F1.md  (+4 more)
docs/guides/: 01-overview.md  02-install.md  03-using-the-report.md  04-updating.md  05-troubleshooting.md  06-feature-reference.md  07-cost-optimization-playbook.md  08-daily-run-automation.md  README.md
machines/charl/: report.html  session_metrics.json
prs/: README.md  pr-36.md  pr-37.md  pr-38.md  pr-40.md
releases/: README.md
releases/pr-release-page-generator-with-lifecycle-ci/: release.md
releases/traceyield-docs-site/: release.md
scripts/: check-docs-index.sh  install-hooks.sh  sync-issues.py
scripts/hooks/: pre-commit
site/: astro.config.mjs  base.config.mjs  package-lock.json  package.json  remark-doc-links.mjs  remark-strip-heading-numbers.mjs
site/src/: content.config.ts  docs-nav.mjs
src/traceyield/: __init__.py  __main__.py  aggregation.py  canonical.py  classification.py  cli.py  health.py  html.py  models.py  paths.py  persistence.py  pricing.py  report.py  transcripts.py
tests/: helpers.py  test_aggregation.py  test_canonical.py  test_cli_smoke.py  test_compat.py  test_health.py  test_html.py  test_html_resource.py  test_layout.py  test_models.py  test_module_split.py  test_packaging.py  test_pages.py  test_paths.py  test_persistence.py  test_pricing.py  test_providers.py  test_report.py
(+55 files in other folders)
